compile_log.txt
Reusing configuration cache.
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:preBuild UP-TO-DATE
> Task :app:checkDependenciesOrder
> Task :app:runCheckstyle UP-TO-DATE
> Task :app:formatKtlint UP-TO-DATE
> Task :app:runKtlint UP-TO-DATE
> Task :app:preDebugBuild
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:extractDebugSupportedLocales UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:generateDebugLocaleConfig UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE
> Task :app:kaptDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\user\.gemini\antigravity\scratch\Youtube_Transcribtion\Tubular\app\src\main\java\org\schabi\newpipe\player\Player.java:2011: error: cannot find symbol
        final String url = currentMetadata.getUrl();
                                          ^
  symbol:   method getUrl()
  location: variable currentMetadata of type MediaItemTag
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\user\.gemini\antigravity\scratch\Youtube_Transcribtion\Tubular\app\src\main\java\org\schabi\newpipe\fragments\list\playlist\PlaylistFragment.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/user/.gemini/antigravity/scratch/Youtube_Transcribtion/Tubular/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\user\.gemini\antigravity\scratch\Youtube_Transcribtion\Tubular\app\src\main\java\org\schabi\newpipe\player\Player.java:2011: error: cannot find symbol
          final String url = currentMetadata.getUrl();
                                            ^
    symbol:   method getUrl()
    location: variable currentMetadata of type MediaItemTag
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 2s
30 actionable tasks: 2 executed, 28 up-to-date
Configuration cache entry reused.
